test_programs/compile_failure/regression_10388/src/main.nr
fn main() {
  let mut x: i8 = 2;
  let _ = !(&mut x);
}
